fixed button self-aligns

--- a/less/main.less
+++ b/less/main.less
@@ -259,6 +259,9 @@ form {
 	textarea {
 		resize: none;
 	}
+	.button {
+		align-self: stretch;
+	}
 }
 
 legend {
@@ -370,7 +373,6 @@ legend {
 fieldset {
 	.f;
 	> * {
-		width: 100%;
 		margin-bottom: 20px;
 	}
 }
@@ -488,6 +490,7 @@ fieldset {
 	}
 	.button {
 		width: 255px;
+		align-self: center;
 	}
 }
 
